feat: [CDS-75576]: added junits (#53267)